--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "jquery": "latest",
     "jquery-mobile": "latest",
     "backbone": "latest",
-    "underscore": "latest"
+    "underscore": "latest",
+    "backbone.marionette": "latest"
   },
   "ignore": [
     "**/.*",
